@@ -1,3 +1,8 @@
+Development Portal (2016-09-01 shi)
+==============================
+Added maximum width for table titles for large numbers
+
+
 Development Portal (2016-06-23 shi)
 ==============================
 Clean up Tips section
